--- a/content/blog/checkpoint-chronicle-april-2024.adoc
+++ b/content/blog/checkpoint-chronicle-april-2024.adoc
@@ -34,7 +34,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 == Event Streaming
 * Loving, loving, loving the post link:https://towardsdatascience.com/real-time-twitch-chat-sentiment-analysis-with-apache-flink-e165ac1a8dcf[Real-Time Twitch Chat Sentiment Analysis with Apache Flink] by Volker Janz: it describes how to implement a streaming pipeline for sentiment analysis from the ground up, implementing a custom source function to ingest Twitch chat messages into Flink and using the link:https://stanfordnlp.github.io/CoreNLP/[Stanford CoreNLP library] for processing the same. Excellent write-up!
-* “Debezium and Kafka are a solid tandem for replication needs.” I always enjoy reading posts where data engineers describe the problems they've encountered and how they've overcome them, as there is so much to learn from them. In link:https://www.revenuecat.com/blog/engineering/data-ingestion-snowflake/[How we solved RevenueCat's biggest challenges on data ingestion into Snowflake], Jesús Sánchez provides a deep insight into their data ingestion pipeline and explains why the team decided to build it that way.
+* "Debezium and Kafka are a solid tandem for replication needs." I always enjoy reading posts where data engineers describe the problems they've encountered and how they've overcome them, as there is so much to learn from them. In link:https://www.revenuecat.com/blog/engineering/data-ingestion-snowflake/[How we solved RevenueCat's biggest challenges on data ingestion into Snowflake], Jesús Sánchez provides a deep insight into their data ingestion pipeline and explains why the team decided to build it that way.
 * Head-of-line blocking is a well-known issue most Kafka users will encounter sooner or later (here's a link:https://twitter.com/gunnarmorling/status/1541809606384652295[Twitter thread] I did a while ago on this topic). One way for dealing with this problem is to use parallel Kafka consumers, as nicely illustrated in link:https://blogs.halodoc.io/maximizing-kafka-efficiency-exploring-parallel-consumers/[this post] by the engineering team of Halodoc.
 * Is the Kafka wire protocol the more important thing than the Apache Kafka project itself? Chris Riccomini makes the case for this way of looking at things in link:https://materializedview.io/p/ce-nest-pas-un-kafka[Ce n'est pas un Kafka: Kafka is a Protocol], drawing parallels to similar cases like the protocols of S3, Redis, or Postgres.
 * In link:https://www.freshworks.com/saas/eng-blogs/modernizing-analytics-data-ingestion-pipeline-distributed-processing-engine/[Modernizing analytics data ingestion pipeline from legacy engine to distributed processing engine] Dineshkumar Shanmugam describes how Freshworks moved a data pipeline processing up to 800,000 events per minute from a bespoke Python-based implementation to Apache Spark.
@@ -50,14 +50,14 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 == Data Ecosystem
 * The link:https://www.highgo.ca/blog/[High Go blog] is a great place for learning more about everyone's favourite RDBMS, aka Postgres. link:https://www.highgo.ca/2024/01/26/a-comprehensive-overview-of-postgresql-query-processing-stages/[This post] by Cary Huang is no exception, providing a nice overview of the stages a query goes through when being executed.
-* The Kafka community is bidding farewell to ZooKeeper, not only reducing the operational complexity of running Kafka clusters but also allowing for way more partitions on individual nodes than before. In his latest post, Paolo Patierno of the Strimzi team describes the differences between using Kafka with ZooKeeper and without (“KRaft mode”) and how to link:https://strimzi.io/blog/2024/03/21/kraft-migration/[migrate existing clusters to the new mode].
+* The Kafka community is bidding farewell to ZooKeeper, not only reducing the operational complexity of running Kafka clusters but also allowing for way more partitions on individual nodes than before. In his latest post, Paolo Patierno of the Strimzi team describes the differences between using Kafka with ZooKeeper and without ("KRaft mode") and how to link:https://strimzi.io/blog/2024/03/21/kraft-migration/[migrate existing clusters to the new mode].
 * When running a Kafka (or as in this case, Redpanda) cluster in a single region isn't enough to address your availability requirements, a multi-region set-up is the way to go. In link:https://www.infoq.com/presentations/redpanda-raft/[this talk from QCon London], Michał Maślanka discusses the fundamentals of multi-region clusters and dives into details such as leader election, reads from follower replicas, and tiered storage.
 * Not only Apache Flink has data catalogs (as Robin discussed in link:https://www.decodable.co/blog/catalogs-in-flink-sql-a-primer[these] link:https://www.decodable.co/blog/catalogs-in-flink-sql-hands-on[two posts] a few weeks ago), but also other data systems such as Apache Iceberg. In link:https://medium.com/data-engineering-with-dremio/a-deep-dive-into-the-concept-and-world-of-apache-iceberg-catalogs-0697e8d18a8b[A Deep Dive into the Concept and World of Apache Iceberg Catalogs], Dremio's Alex Merced explores different catalog implementations for the popular open-source table format, including AWS Glue, Hive, Nessie, and others.
 * DuckDB is an in-process analytics database, which has seen tremendous interest over the last few years. Initially solely an in-memory engine, it supports spilling over to disk when processing queries against large datasets since version 0.9. If you are curious about how this works under the hood, I highly recommend to check out this post about link:https://duckdb.org/2024/03/29/external-aggregation.html[external aggregation in DuckDB], by Laurens Kuiper.
 
 
 == FLIP Foyer
-* link:https://cwiki.apache.org/confluence/display/FLINK/FLIP-435%3A+Introduce+a+New+Materialized+Table+for+Simplifying+Data+Pipelines[FLIP-435: Introduce a New Materialized Table for Simplifying Data Pipelines], proposing to introduce “a new table type [...], called Materialized Table, to simplify streaming and batch ETL pipeline cost-effectively”.
+* link:https://cwiki.apache.org/confluence/display/FLINK/FLIP-435%3A+Introduce+a+New+Materialized+Table+for+Simplifying+Data+Pipelines[FLIP-435: Introduce a New Materialized Table for Simplifying Data Pipelines], proposing to introduce "a new table type [...], called Materialized Table, to simplify streaming and batch ETL pipeline cost-effectively".
 * link:https://cwiki.apache.org/confluence/pages/viewpage.action?pageId=293046855[FLIP-423: Disaggregated State Storage and Management (Umbrella FLIP)], proposing to support remote (object) storage for state management purposes in Flink
 
 
