--- a/content/blog/checkpoint-chronicle-january-2024.adoc
+++ b/content/blog/checkpoint-chronicle-january-2024.adoc
@@ -30,7 +30,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://blog.rockthejvm.com/flink-sql-introduction/[Streaming SQL with Apache Flink: A Gentle Introduction] Flink SQL exposes Flink's powerful stream processing capabilities to a large audience of SQL-savvy data engineers. This post by Giannis Polyzos is an excellent introduction to Flink SQL, discussing different kinds of query operators, checkpointing, and more.
 * link:https://www.scalevp.com/insights/stream-processing-becomes-mainstream/[Stream processing becomes mainstream] A high-level overview on the current state of stream processing by Javier Redondo, discussing the differences between stream-to-sink and stream-to-table frameworks as well as between libraries and cluster frameworks.
 * link:https://www.decodable.co/blog/building-a-fully-managed-apache-flink-service-behind-the-scenes[Building a Fully Managed Apache Flink Service, Behind the Scenes] Decodable software engineer Jared Breeden explores in this post what it takes to build a fully managed platform for stream processing based on Flink, touching on aspects like developer experience, observability, schema management, etc.
-* link:https://www.arroyo.dev/blog/stateful-stream-processing[What is stateful stream processing?] Insightful post by Arroyo's Micah Wylde, explaining what the “state” in stateful stream processing is about, how systems like Flink and Arroyo deal with it, and how checkpointing ensures consistency after failures.
+* link:https://www.arroyo.dev/blog/stateful-stream-processing[What is stateful stream processing?] Insightful post by Arroyo's Micah Wylde, explaining what the "state" in stateful stream processing is about, how systems like Flink and Arroyo deal with it, and how checkpointing ensures consistency after failures.
 * link:https://materializedview.io/p/change-data-capture-still-breaks-db-encapsulatio[Yes, Change Data Capture Still Breaks Database Encapsulation] This one is a reaction by Chris Riccomini to link:https://www.decodable.co/blog/change-data-capture-breaks-encapsulation-does-it-though[my recent article] which in turn was triggered by Chris' link:https://cnr.sh/essays/kafka-change-data-capture-breaks-database-encapsulation[original post], all on the same subject. Overall I feel Chris and I are not really in disagreement that much, it's more that I described building blocks and implementation techniques, whereas Chris is looking for a ready-made product experience.
 * link:https://ververica.github.io/flink-cdc-connectors/release-3.0/content/overview/cdc-pipeline.html[CDC Streaming ELT Framework] Flink CDC 3.0, released at the end of last year, introduces a new ELT framework, aiming to simplify the definition of CDC-driven data pipelines. The reference documentation is a great starting point to learn more about this project, which was just link:https://lists.apache.org/list?dev@flink.apache.org:lte=1M:cdc[adopted into the upstream Apache Flink project] earlier this month.
 
@@ -39,7 +39,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://engineering.grab.com/frequency-capping[Sliding window rate limits in distributed systems] Naveen Kumar Jakuva Premkumar and Abdullah Al Mamun of Grab discuss in this in-depth post how they rate limit the number of marketing emails and push notifications sent to their users, using two of my favorite data structures: bloom filters and roaring bitmaps.
 * link:https://newrelic.com/blog/how-to-relic/understanding-lag-in-a-streaming-pipeline[Understanding lag in a streaming pipeline] New Relic is known as a large-scale user of Apache Kafka. So it's always interesting to learn about their experiences from running data streaming pipelines. Amy Boyle explains how they identify lag in pipelines using different techniques, as well as their strategies for automatically and dynamically adapting to it.
 * link:https://blog.cloudflare.com/an-overview-of-cloudflares-logging-pipeline/[An overview of Cloudflare's logging pipeline] Cloudflare's blog is a great source of insightful posts on the technologies they use. In this article, Colin Douch gives an overview on Cloudflare's logging pipeline, based on Apache Kafka, connecting clusters in multiple data centers using Mirror Maker, and streaming logs to queryable systems such as Clickhouse and Elasticsearch.
-* link:https://engineering.mixpanel.com/how-mixpanel-built-a-fast-lane-for-our-modern-data-stack-680701736f8c[How Mixpanel Built a “Fast Lane” for Our Modern Data Stack] A slightly longer read, but definitely worth the time: Illirik Smirnov shares experiences from his work at Mixpanel for creating a near-real-time data pipeline based on Google Cloud Pub/Sub for use cases where their existing (reverse) ETL system doesn't provide the required latency SLAs.
+* link:https://engineering.mixpanel.com/how-mixpanel-built-a-fast-lane-for-our-modern-data-stack-680701736f8c[How Mixpanel Built a "Fast Lane" for Our Modern Data Stack] A slightly longer read, but definitely worth the time: Illirik Smirnov shares experiences from his work at Mixpanel for creating a near-real-time data pipeline based on Google Cloud Pub/Sub for use cases where their existing (reverse) ETL system doesn't provide the required latency SLAs.
 
 
 == Change Data Capture
@@ -51,11 +51,11 @@ Feel free to send our way any choice nuggets that you think we should feature in
 
 == Data Platforms and Architecture
 * link:https://netflixtechblog.com/our-first-netflix-data-engineering-summit-f326b0589102[Our First Netflix Data Engineering Summit] Netflix data engineers shared their learnings around building reliable data pipelines in an internal conference last year. The sessions by Holden Karau and others have been published on YouTube now, including gems such as link:https://www.youtube.com/watch?v=TwcWvwU7B64&list=PLSECvWLlUYeF06QK5FOOELvgKdap3cQf0&index=5[Streaming SQL on Data Mesh using Apache Flink] and link:https://www.youtube.com/watch?v=jRckeOedtx0&list=PLSECvWLlUYeF06QK5FOOELvgKdap3cQf0&index=6[Psyberg, An Incremental ETL Framework Using Iceberg].
-* link:https://gotopia.tech/articles/284/designing-a-data-intensive-future-an-unscripted-journey-with-martin-kleppmann[Designing A Data-Intensive Future: An Unscripted Journey with Martin Kleppmann] Jesse Anderson interviews data legend Martin Kleppmann, talking about the evolution of data systems since Martin's book “Designing Data-Intensive Applications” came out in 2017, his current work on local-first collaboration software, and his thoughts about being in academia.
+* link:https://gotopia.tech/articles/284/designing-a-data-intensive-future-an-unscripted-journey-with-martin-kleppmann[Designing A Data-Intensive Future: An Unscripted Journey with Martin Kleppmann] Jesse Anderson interviews data legend Martin Kleppmann, talking about the evolution of data systems since Martin's book "Designing Data-Intensive Applications" came out in 2017, his current work on local-first collaboration software, and his thoughts about being in academia.
 * link:https://product.hubspot.com/blog/imbalanced-traffic-routing[Handling Imbalanced Traffic with Kafka Swimlanes] Mixing messages from different sources on one Kafka topic can cause a delay in processing when there are sudden spikes in the messages coming in from one producer. Angus Gibbs of HubSpot discusses how they address that issue, for instance routing backfill traffic and real-time traffic to different topics.
 * link:https://doordash.engineering/2023/12/05/api-first-approach-to-kafka-topic-creation/[API-First Approach to Kafka Topic Creation] Managing Kafka topics in a consistent, secure, and reliable manner, ideally as self-service for developers, is an evergreen topic for data platform teams. Varun Chakravarthy et al. describe in this post how they've solved this problem at DoorDash by means of infra-structure-as-code using Pulumi.
 * link:https://engineering.grab.com/kafka-on-kubernetes[Kafka on Kubernetes: Reloaded for fault tolerance] The Strimzi operator is a very popular way for running Apache Kafka on Kubernetes. Fabrice Harbulot and Thang Le of Grab discuss how they have designed their Kafka cluster deployments with a strong focus on fault tolerance, leveraging Strimzi's rolling deployment mechanism and EBS volumes for persisting the data from their Kafka topics.
-* link:https://www.youtube.com/watch?v=V7vhSHqMxus[Can Event-Driven Architecture make Software Design Easier?] An episode of Kris Jenkins' link:https://www.youtube.com/@DeveloperVoices/featured[“Developer Voices”] podcast, talking about everything events: event systems, Event Sourcing, the CloudEvents specification, and more. And it being a podcast with Kris, of course there was a mention of Clojure too.
+* link:https://www.youtube.com/watch?v=V7vhSHqMxus[Can Event-Driven Architecture make Software Design Easier?] An episode of Kris Jenkins' link:https://www.youtube.com/@DeveloperVoices/featured["Developer Voices"] podcast, talking about everything events: event systems, Event Sourcing, the CloudEvents specification, and more. And it being a podcast with Kris, of course there was a mention of Clojure too.
 
 
 == Data Ecosystem
@@ -70,7 +70,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 == Paper of the Month
 📄 *DBLog: A Watermark Based Change-Data-Capture Framework* ( link:https://arxiv.org/abs/2010.12597[arXiv:2010.12597] )
 
-In this paper from 2020, Andreas Andreakis and Ioannis Papapanagiotou, back then working on a CDC solution at Netflix, propose an innovative algorithm for running backfills of existing data (“snapshotting”) concurrently to reading changes from the transaction log, leveraging a windowed de-duplication approach.
+In this paper from 2020, Andreas Andreakis and Ioannis Papapanagiotou, back then working on a CDC solution at Netflix, propose an innovative algorithm for running backfills of existing data ("snapshotting") concurrently to reading changes from the transaction log, leveraging a windowed de-duplication approach.
 Adopted by Debezium, Flink CDC, and other CDC solutions, this has been a massive improvement for data engineering teams running CDC pipelines.
 
 
