--- a/content/blog/checkpoint-chronicle-july-2024.adoc
+++ b/content/blog/checkpoint-chronicle-july-2024.adoc
@@ -53,7 +53,7 @@ Feel free to send our way any choice nuggets that you think we should feature in
 * link:https://www.uber.com/en-GB/blog/kafka-tiered-storage/[Introduction to Kafka Tiered Storage at Uber.] Tiered storage, as introduced by link:https://cwiki.apache.org/confluence/display/KAFKA/KIP-405%3A+Kafka+Tiered+Storage?uclick_id=e4d3c5d9-7f42-433b-88d4-2c674ea9af9f[KIP-405], promises to reduce cost by storing less frequently used data on slower (but cheaper) storage layers—for instance object stores such as S3—and paging it in transparently on demand. This post by Satish Duggana, Kamal Chandraprakash, and Abhijeet Kumar provides an introduction and high-level overview of the architecture of this feature which was pioneered by Uber.
 * link:https://jack-vanlightly.com/analyses/2024/7/3/understanding-apache-paimon-consistency-model-part-1[Understanding Apache Paimon's Consistency Model Part 1] *.* Following on the heels of Apache Iceberg, Delta Lake and Apache Hudi, Apache Paimon is yet another open table format, originally developed as part of the Flink project. In this excellent three part series ( link:https://jack-vanlightly.com/analyses/2024/7/3/understanding-apache-paimon-consistency-model-part-2[part 2], link:https://jack-vanlightly.com/analyses/2024/7/3/understanding-apache-paimon-consistency-model-part-3[part 3] ), Jack Vanlightly discusses Paimon in depth, touching on its basic mechanics, consistency model, and even a formal verification.
 * link:https://medium.com/walmartglobaltech/reliably-processing-trillions-of-kafka-messages-per-day-23494f553ef9[Reliably Processing Trillions of Kafka Messages Per Day.] Walmart deploys Apache Kafka, with a whopping 25,000 consumers. Ravinder Matte et al. discuss in this post how they overcame issues with rebalancing and head-of-line blocking at that scale by putting consuming applications behind a REST proxy.
-* link:https://www.warpstream.com/blog/the-kafka-metric-youre-not-using-stop-counting-messages-start-measuring-time[The Kafka Metric You're Not Using: Stop Counting Messages, Start Measuring Time.] Imagine you are paged to an alert “Kafka consumer XYZ lags behind by 1M messages”. What does that mean though? In this post, Aratz Manterola Lasa argues that Kafka consumer lag should better be described in terms of time rather than offsets, making it much easier to understand and interpret.
+* link:https://www.warpstream.com/blog/the-kafka-metric-youre-not-using-stop-counting-messages-start-measuring-time[The Kafka Metric You're Not Using: Stop Counting Messages, Start Measuring Time.] Imagine you are paged to an alert "Kafka consumer XYZ lags behind by 1M messages". What does that mean though? In this post, Aratz Manterola Lasa argues that Kafka consumer lag should better be described in terms of time rather than offsets, making it much easier to understand and interpret.
 
 
 == RDBMS and Change Data Capture
