--- a/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
+++ b/content/blog/getting-started-with-pyflink-on-kubernetes.adoc
@@ -40,7 +40,7 @@ _Fig.1: Solution Overview (click to enlarge)_
 In a nutshell, PyFlink is the Python-based API to link:https://flink.apache.org/[Apache Flink].
 Per the docs, it link:https://nightlies.apache.org/flink/flink-docs-stable/docs/dev/python/overview/[enables you] to
 
-_“build scalable batch and streaming workloads, such as real-time data processing pipelines, large-scale exploratory data analysis, Machine Learning (ML) pipelines and ETL processes”._
+_"build scalable batch and streaming workloads, such as real-time data processing pipelines, large-scale exploratory data analysis, Machine Learning (ML) pipelines and ETL processes"._
 
 It is particularly useful for development teams who are more familiar with Python than with Java and who still would like to benefit from Flink's powerful stream processing capabilities.
 Another factor is Python's rich 3rd party ecosystem: not only does it provide libraries for data engineering (e.g.
@@ -57,7 +57,7 @@ Implementation-wise, PyFlink acts as a wrapper around Flink's Java APIs.
 Upon start-up, the job graph is retrieved from the Python job using link:https://www.py4j.org/[Py4J], a bridge between the Python VM and the JVM.
 It then gets transformed into an equivalent job running on the Flink cluster.
 At runtime, Flink will call back to the Python VM for executing any Python-based user-defined functions (UDFs) with the help of the link:https://beam.apache.org/roadmap/portability/[Apache Beam portability framework].
-As of Flink 1.15, there's also support for a new execution mode called link:https://flink.apache.org/2022/05/06/exploring-the-thread-mode-in-pyflink/[“thread mode”], where Python code is executed on the JVM itself (via JNI), avoiding the overhead of cross-process communication.
+As of Flink 1.15, there's also support for a new execution mode called link:https://flink.apache.org/2022/05/06/exploring-the-thread-mode-in-pyflink/["thread mode"], where Python code is executed on the JVM itself (via JNI), avoiding the overhead of cross-process communication.
 
 
 == Prerequisites
