--- a/content/blog/insatiable-postgres-replication-slot.asciidoc
+++ b/content/blog/insatiable-postgres-replication-slot.asciidoc
@@ -128,7 +128,7 @@ and I came across the blog post https://wolfman.dev/posts/pg-logical-heartbeats/
 who ran into the exact same issue as I did.
 As it turns out, RDS is periodically writing heartbeats into that `rdsadmin` database:
 
-> In RDS, we write to a heartbeat table in our internal “rdsadmin” database every 5 minutes
+> In RDS, we write to a heartbeat table in our internal "rdsadmin" database every 5 minutes
 
 This is one part of the explanation: in our seemingless inactive RDS Postgres database,
 there actually _is_ some traffic.
