--- a/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
+++ b/content/blog/introducing-support-for-the-apache-flink-web-ui.adoc
@@ -64,7 +64,7 @@ In a future version of the SDK, this metadata will be extracted from the stream 
 
 == Next Steps
 If you haven't done so yet, you can request access to the Custom Pipelines Tech Preview from the Decodable Web UI.
-Simply choose “Request Custom Pipelines Access” from the drop-down when creating a pipeline, which will initiate the process for bootstrapping all the required resources and making it available to you shortly thereafter.
+Simply choose "Request Custom Pipelines Access" from the drop-down when creating a pipeline, which will initiate the process for bootstrapping all the required resources and making it available to you shortly thereafter.
 
 In terms of the near-term roadmap for Custom Pipelines, we are planning to integrate Decodable managed secrets, allowing you to use secrets when, for example, configuring the connectors of a custom Flink job.
 We're also working towards the exposure of custom job metrics to your Datadog instance (akin to what's already supported for SQL pipelines), the ability to build custom jobs from source from a given git repository (rather than uploading JAR files), and much more.
