--- a/content/blog/kafka-where-art-thou.asciidoc
+++ b/content/blog/kafka-where-art-thou.asciidoc
@@ -168,7 +168,7 @@ As https://twitter.com/xkzielinski/[Kacper Zielinski] tells us, this approach is
 
 ++++
 <div align="center">
-<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr" align="left">Outbox / SEDA to rescue here. Not sure if any “retry” can guarantee you more than “either you will loose some messages or fail the business logic by eating all resources” :)</p>&mdash; Kacper Zielinski (@xkzielinski) <a href="https://twitter.com/xkzielinski/status/1464676092380332039">November 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+<blockquote class="twitter-tweet" data-conversation="none" data-dnt="true"><p lang="en" dir="ltr" align="left">Outbox / SEDA to rescue here. Not sure if any "retry" can guarantee you more than "either you will loose some messages or fail the business logic by eating all resources" :)</p>&mdash; Kacper Zielinski (@xkzielinski) <a href="https://twitter.com/xkzielinski/status/1464676092380332039">November 27, 2021</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
 </div>
 ++++
 
