--- a/content/blog/seven-must-see-talks-at-current-2024.adoc
+++ b/content/blog/seven-must-see-talks-at-current-2024.adoc
@@ -97,7 +97,7 @@ And I've heard there's gonna be some really cool swag too.
 == Change Data Capture & Kafka: How Slack Transitioned to CDC with Debezium & Kafka Connect
 Wed Sep 18, 4:00 PM - 4:45 PM
 
-“The CDC pipeline slashed cost by millions and slashed latency from 24 hours to less than 10 minutes.” Do you need any more reasons for adopting Debezium and CDC?
+"The CDC pipeline slashed cost by millions and slashed latency from 24 hours to less than 10 minutes." Do you need any more reasons for adopting Debezium and CDC?
 Having worked on Debezium for several years, I am always loving to learn about success stories from people adopting change data capture, in particular when it's such large scale users like Slack, who also contributed to Debezium's connector for Vitess.
 Really looking forward to this session by Slack engineers Joseph Thaidigsman and Tom Thornton.
 
