--- a/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.adoc
+++ b/content/blog/the-wonders-of-postgres-logical-decoding-messages-for-cdc.adoc
@@ -76,7 +76,7 @@ A replication slot represents one specific stream of changes coming from a Postg
 For this purpose, it stores the latest log sequence number ( link:https://www.postgresql.org/docs/current/wal-internals.html[LSN] ) that the slot's consumer has processed and acknowledged.
 
 Each slot has a name and an assigned decoding plug-in which defines the format of that stream.
-Create a slot using the “test_decoding” plug-in, which emits changes in a simple text-based protocol, like this:
+Create a slot using the "test_decoding" plug-in, which emits changes in a simple text-based protocol, like this:
 
 
 [source,shell,linenums]
@@ -126,7 +126,7 @@ The function has three parameters:
 * `prefix`: a textual identifier for categorizing messages; for instance, this could indicate the type of a specific message
 * `content`: the actual payload of the message, either as text or binary data; you have full flexibility of what to emit here, e.g., in regard to format, schema, and semantics
 
-When you retrieve changes from the slot again after having emitted a message, you now should see three change events: a `BEGIN` and a `COMMIT` event for the implicitly created transaction when emitting the event, and the “Hello World!” message itself.
+When you retrieve changes from the slot again after having emitted a message, you now should see three change events: a `BEGIN` and a `COMMIT` event for the implicitly created transaction when emitting the event, and the "Hello World!" message itself.
 Note that this message doesn't appear in any Postgres table or view as would be the case when adding data using the `INSERT` statement; this message is solely present in the database's transaction log.
 
 There are a few other useful functions dealing with logical decoding messages and replication slots, including the following:
@@ -145,7 +145,7 @@ Having discussed the foundations of logical decoding messages, let's now explore
 
 === The Outbox Pattern
 For microservices, it's a common requirement that, when processing a request, a service needs to update its own database and simultaneously send a message to other services.
-As an example, consider a “fulfillment” service in an e-commerce scenario: when the status of a shipment changes from `READY_TO_SHIP` to `SHIPPED`, the shipment's record in the fulfillment service database needs to be updated accordingly, but also a message should be sent to the “customer” service so that it can update the customer's account history and trigger an email notification for the customer.
+As an example, consider a "fulfillment" service in an e-commerce scenario: when the status of a shipment changes from `READY_TO_SHIP` to `SHIPPED`, the shipment's record in the fulfillment service database needs to be updated accordingly, but also a message should be sent to the "customer" service so that it can update the customer's account history and trigger an email notification for the customer.
 
 Now, when using data streaming platforms like link:https://kafka.apache.org/[Apache Kafka] for connecting your services, you can't reliably implement this scenario by just letting the fulfillment service issue its local database transaction and then send a message via Kafka.
 The reason is that it is not supported to have shared transactions for a database and Kafka (in technical terms, Kafka can't participate in distributed transaction protocols like XA).
@@ -153,7 +153,7 @@ While everything looks fine on the surface, you can end up with an inconsistent 
 The database transaction could get committed, but sending out the notification via Kafka fails.
 Or, the other way around: the customer service gets notified, but the local database transaction gets rolled back.
 
-While you can find this kind of implementation in many applications, always remember: link:https://twitter.com/QConSF/status/1278315930586677250[“Friends don't let friends do dual writes”]!
+While you can find this kind of implementation in many applications, always remember: link:https://twitter.com/QConSF/status/1278315930586677250["Friends don't let friends do dual writes"]!
 A solution to this problem is the outbox pattern: instead of trying to update two resources at once (a database and Kafka), you only update a single one—the service's database.
 When updating the shipment state in the database, you also write the message to be sent to an outbox table; this happens as part of one shared transaction, i.e., applying the atomicity guarantees you get from ACID transactions.
 Either the shipment state update and the outbox message get persisted, or none of them do.
@@ -178,9 +178,9 @@ One commonly used approach is to look at the design of outbox events and their s
 Specifically, Debezium recommends that your messages have the link:https://debezium.io/documentation/reference/stable/transformations/outbox-event-router.html[following attributes] :
 
 * *id*: a unique message id, e.g., a UUID, which consumers can use for deduplication purposes
-* *aggregate type*: describes the kind of aggregate an event is about, e.g., “customer,” “shipment,” or “purchase order”; when propagating outbox events via Kafka or other streaming platforms, this can be used for sending events of one aggregate type to a specific topic
+* *aggregate type*: describes the kind of aggregate an event is about, e.g., "customer," "shipment," or "purchase order"; when propagating outbox events via Kafka or other streaming platforms, this can be used for sending events of one aggregate type to a specific topic
 * *aggregate id*: the id of the aggregate an event is about, e.g., a customer or order id; this can be used as the record key in Kafka, thus ensuring all events pertaining to one aggregate will go to the same topic partition and making sure consumers receive these events in the correct order
-* *payload:* the actual message payload; unlike “raw” table-level CDC events, this can be a rich structure, representing an entire aggregate and all its parts, which in the database itself may spread across multiple tables
+* *payload:* the actual message payload; unlike "raw" table-level CDC events, this can be a rich structure, representing an entire aggregate and all its parts, which in the database itself may spread across multiple tables
 
 *Figure 1: Routing outbox events from the transaction log to different Kafka topics.*Enough of the theory—let's see how a database transaction could look, which emits a logical decoding message with an outbox event. In the accompanying GitHub repository, you can find a Docker Compose file for spinning up all the required components and link:https://github.com/decodableco/examples/blob/main/postgres-logical-decoding/README.md[detailed instructions] for running the complete example yourself. Emit an outbox message like this:
 
@@ -206,7 +206,7 @@ postgresuser@postgres:demodb> SELECT * FROM pg_logical_emit_message(
  
 ----
 This creates a transactional message (i.e., it would not be emitted if the transaction aborts, e.g., because of a constraint violation of another record inserted in the same transaction).
-It uses the “outbox” prefix (allowing it to distinguish it from messages of other types) and contains a JSON message as the actual payload.
+It uses the "outbox" prefix (allowing it to distinguish it from messages of other types) and contains a JSON message as the actual payload.
 
 Regarding retrieving change events and propagating them to Kafka, the details depend on how exactly Debezium, as the underlying CDC tool, is deployed.
 When used with link:https://kafka.apache.org/documentation/#connect[Kafka Connect], Debezium provides a link:https://debezium.io/documentation/reference/stable/transformations/outbox-event-router.html[single message transform] (SMT) that supports outbox tables and, for instance, routes outbox events to different topics in Kafka based on a configurable column containing the aggregate type.
@@ -261,7 +261,7 @@ public class OutboxSerializer implements KafkaRecordSerializationSchema {
   }
 }
 ----
-With that Flink job in place, you'll be able to examine the outbox message on the “shipment” Kafka topic like so:
+With that Flink job in place, you'll be able to examine the outbox message on the "shipment" Kafka topic like so:
 
 
 [source,json,linenums]
@@ -311,9 +311,9 @@ SELECT * FROM pg_logical_emit_message(false, 'log', 'ERROR');
 INSERT INTO data(id, value) VALUES('4', 'qux');
 ROLLBACK;
 ----
-The first transaction inserts two records in a new table, “data” and also emits a logical decoding message.
+The first transaction inserts two records in a new table, "data" and also emits a logical decoding message.
 The second transaction applies similar changes but then is rolled back.
-When retrieving the change events from the replication slot (using the “testing” decoding plug-in as shown above), the following events will be returned:
+When retrieving the change events from the replication slot (using the "testing" decoding plug-in as shown above), the following events will be returned:
 
 
 [source,shell,linenums]
@@ -401,7 +401,7 @@ public void flatMap(String value, Collector out)
 ----
 The logic is as follows:
 
-* When the incoming event is of type “m” (i.e., a logical decoding message) and it is an audit metadata event, put the content of the event into a Flink value state
+* When the incoming event is of type "m" (i.e., a logical decoding message) and it is an audit metadata event, put the content of the event into a Flink value state
 * When the incoming event is of any other type, and we have stored audit state for the event's transaction before, enrich the event with that state
 * When the transaction id of the incoming event doesn't match what's stored in the audit state (e.g., when a transaction was issued without a metadata event at the beginning), clear the state store and propagate the event as is
 
@@ -481,7 +481,7 @@ The enriched change events, as emitted by Apache Flink, would look like so:
 ----
 Within the same Flink job, you now could add a sink connector and for instance write the enriched events into a Kafka topic.
 Alternatively, depending on your business requirements, it can be a good idea to propagate the change events into a queryable store, for instance, an OLAP store like link:https://pinot.apache.org/[Apache Pinot] or link:https://clickhouse.com/[Clickhouse].
-You could use the same approach for enriching change events with contextual metadata for other purposes too, generally speaking for capturing all kinds of “intent” which isn't directly persisted in the business tables of your application.
+You could use the same approach for enriching change events with contextual metadata for other purposes too, generally speaking for capturing all kinds of "intent" which isn't directly persisted in the business tables of your application.
 
 
 === Bonus: Advancing Replication Slots
@@ -521,7 +521,7 @@ docker run --tty --rm -i \
 postgresuser@order-db:db1> CREATE TABLE data (id INTEGER, value TEXT);
 postgresuser@order-db:db1> INSERT INTO data SELECT generate_series(1,1000) AS id, md5(random()::text) AS value;
 ----
-Query the status of the replication slot (“flink”, set up for database “DB2”), and as you keep running more inserts in DB1, you'll see that the retained WAL of that slot continuously grows, as long as there are no changes done over in DB2:
+Query the status of the replication slot ("flink", set up for database "DB2"), and as you keep running more inserts in DB1, you'll see that the retained WAL of that slot continuously grows, as long as there are no changes done over in DB2:
 
 
 [source,shell,linenums]
@@ -555,8 +555,8 @@ docker run --tty --rm -i \
 postgresuser@order-db:db2> SELECT pg_logical_emit_message(false, 'heartbeat', now()::varchar);
 ----
 In the console output of AdvanceSlotMain you should see the change event emitted by the Debezium connector for that message.
-With the next checkpoint issued by Flink (look for “Completed checkpoint XYZ for job …” messages in the log), the LSN of that event will also be flushed to the database, essentially allowing the database to discard any WAL segments before that.
-If you now examine the replication slot again, you should find that the “retained WAL” value is much lower than before (as this process is asynchronous, it may take a bit until the disk space is freed up).
+With the next checkpoint issued by Flink (look for "Completed checkpoint XYZ for job …" messages in the log), the LSN of that event will also be flushed to the database, essentially allowing the database to discard any WAL segments before that.
+If you now examine the replication slot again, you should find that the "retained WAL" value is much lower than before (as this process is asynchronous, it may take a bit until the disk space is freed up).
 
 
 == Wrapping Up
