--- a/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
+++ b/content/blog/cdc-use-cases-7-ways-to-put-cdc-to-work.adoc
@@ -71,7 +71,7 @@ CDC can be an excellent fit here.
 CDC responds to changes to the database in real time and can feed those changes into a cache updater component that ensures that the local caches provide an up-to-date view.
 
 Besides dedicated caching solutions such as Redis, link:https://github.com/debezium/debezium-examples/tree/main/distributed-caching[Infinispan], or Hazelcast, embedded SQLite databases are an interesting option for implementing application-side caches, as they not only allow for simple key-based look-ups but support full query flexibility via SQL.
-If you would like to learn more about this kind of architecture, take a look at my talk “Keep Your Cache Always Fresh With Debezium”, which explores one implementation of this in depth ( link:https://www.youtube.com/watch?v=zOOFMHAjoPI[video recording], link:https://speakerdeck.com/gunnarmorling/keep-your-cache-always-fresh-with-debezium-current-22[slides] ).
+If you would like to learn more about this kind of architecture, take a look at my talk "Keep Your Cache Always Fresh With Debezium", which explores one implementation of this in depth ( link:https://www.youtube.com/watch?v=zOOFMHAjoPI[video recording], link:https://speakerdeck.com/gunnarmorling/keep-your-cache-always-fresh-with-debezium-current-22[slides] ).
 
 image::cdc-use-cases-fig2.webp[]
 _Fig._
@@ -85,13 +85,13 @@ That way, data can be retrieved from the cache very efficiently, without perform
 
 == Full-Text Search
 Similar to the way in which transactional database systems are not well suited to directly supporting analytical workloads, full-text search also benefits greatly from data stores that are specifically designed for that purpose, such as Elasticsearch or OpenSearch.
-Leveraging search-specific functionality such as stemming, normalization, stop words, synonyms, and abbreviations ensures rapid delivery of the most relevant results for broad or even “fuzzy” searches.
+Leveraging search-specific functionality such as stemming, normalization, stop words, synonyms, and abbreviations ensures rapid delivery of the most relevant results for broad or even "fuzzy" searches.
 
 Just like with the cache example above, CDC fits perfectly in your architecture for keeping your full-text search data store up to date.
 CDC responds in real-time to changes made to the database and sends the changed data events to a tool such as Apache Flink which loads them into your search system.
 
 Another consideration is the potential need to create nested document structures which are used in document stores like Elasticsearch.
-I recently published an episode of “Data Streaming Quick Tips”,  exploring link:https://www.youtube.com/watch?v=ICJ7-YyaC-4[array aggregation] and how to join and nest the data of one aggregate instead of trying to force a 1:1 mapping between RDBMS source tables and search indexes.
+I recently published an episode of "Data Streaming Quick Tips",  exploring link:https://www.youtube.com/watch?v=ICJ7-YyaC-4[array aggregation] and how to join and nest the data of one aggregate instead of trying to force a 1:1 mapping between RDBMS source tables and search indexes.
 If you prefer a text-based version, you can find a transcript of this video link:https://www.decodable.co/blog/array-aggregation-with-flink-sql-data-streaming[here].
 
 
@@ -117,7 +117,7 @@ Alternatively, depending on your business requirements, the enriched change even
 
 == Continuous Queries
 Not all queries need to be served from static stores like Pinot or link:https://www.snowflake.com[Snowflake].
-Apache Flink provides dynamic tables, which is one that is link:https://flink.apache.org/2017/03/30/continuous-queries-on-dynamic-tables/#continuous-queries-on-dynamic-tables[“continuously updated and can be queried like a regular, static table”].
+Apache Flink provides dynamic tables, which is one that is link:https://flink.apache.org/2017/03/30/continuous-queries-on-dynamic-tables/#continuous-queries-on-dynamic-tables["continuously updated and can be queried like a regular, static table"].
 However, in contrast to a static table query, a query on a dynamic table runs continuously and produces a table that is continuously updated based on changes to the input table, with results stored in a new dynamic table.
 
 CDC streams can be used as the source that drives a continuous query, representing a form of an incrementally updated materialized view, always yielding the latest results, as the underlying data changes.
@@ -149,7 +149,7 @@ With the link:https://www.infoq.com/articles/wonders-of-postgres-logical-decodin
 Oftentimes, you don't start building applications from scratch, but there is an existing application landscape which needs to be evolved and expanded.
 In this context, it may be necessary to migrate from an existing monolithic architecture to a set of loosely coupled microservices, splitting up the existing monolith.
 In order to avoid the risks of a big bang migration, it is recommended to take a gradual approach, extracting one service at a time.
-This approach is also named the “strangler fig pattern”, as the new services grow around the old application, “strangling” it over time.
+This approach is also named the "strangler fig pattern", as the new services grow around the old application, "strangling" it over time.
 
 When doing so, the old monolith and the new service(s) will co-exist for some time.
 For example, you may start with extracting just a read view of some data (e.g.
