--- a/content/blog/checkpoint-chronicle-june-2024.adoc
+++ b/content/blog/checkpoint-chronicle-june-2024.adoc
@@ -40,7 +40,7 @@ _I'm going to do something a bit different and open with some coverage of the br
 * As well as announcing the open-sourcing of Unity, Databricks link:https://www.databricks.com/company/newsroom/press-releases/databricks-agrees-acquire-tabular-company-founded-original-creators[announced the acquisition of Tabular]. This is the company founded by Ryan Blue, the original creator of Apache Iceberg. What this means for Iceberg is going to be fascinating to see. Will Databricks use the Iceberg expertise that they've now got to advance the format in parallel with their own Delta Lake, or perhaps just evolve intra-compatibility?
 * If you're not familiar with Iceberg, there's link:https://seattledataguy.substack.com/p/apache-iceberg-what-is-it[a nice primer] from Seattle Data Guy, and you can see it in action in this blog that I wrote about link:https://www.decodable.co/blog/kafka-to-iceberg-with-decodable[writing Kafka data to Iceberg].
 * There's an interesting analysis from Confluent—who are backing Iceberg with their TableFlow product—looking at whether link:https://medium.com/confluent/will-apache-iceberg-win-the-table-format-war-01f6ff0d556d?source=rss----09dcc6e07db7---4[Apache Iceberg will win over Delta Lake] (tl;dr: yes). That said, plenty of vendors are hedging their bets, with BigQuery recently announcing link:https://www.databricks.com/blog/bigquery-adds-first-party-support-delta-lake[first-party support for Delta Lake].
-* Lastly, there were cries of “don't forget us!” from the Apache Hudi crowd, telling us that Hudi is link:https://www.onehouse.ai/blog/apache-hudi-the-open-data-lakehouse-platform-we-need[the Open Data Lakehouse Platform We Need].
+* Lastly, there were cries of "don't forget us!" from the Apache Hudi crowd, telling us that Hudi is link:https://www.onehouse.ai/blog/apache-hudi-the-open-data-lakehouse-platform-we-need[the Open Data Lakehouse Platform We Need].
 
 
 === And finally…
@@ -63,7 +63,7 @@ _I'm going to do something a bit different and open with some coverage of the br
 
 == Data Platforms and Architecture
 * As an active user of Reddit, and a mod over on the link:https://old.reddit.com/r/apachekafka/[r/apachekafka subreddit], I'm always particularly interested to learn more about the platform itself. This blog from Stephan Weinwurm and colleagues in the engineering team at Reddit explains link:https://www.reddit.com/r/RedditEng/comments/1dnklb6/enriching_data_for_reddit_safetys_rules_engine_in/[how they implemented and rolled out a new Python-based microservice based around Kafka] for scoring new content as its posted to check for any breach of Reddit's content rules.
-* I wince every time I see someone give the hackneyed and generic “fraud detection” as a reason for needing real-time data—so these examples from link:https://eng.lyft.com/eta-estimated-time-of-arrival-reliability-at-lyft-d4ca2720bda8?source=rss----25cd379abb8---4[Lyft] and link:https://www.uber.com/en-GB/blog/personalized-marketing-at-scale/[Uber] of how they use data are a really refreshing read.
+* I wince every time I see someone give the hackneyed and generic "fraud detection" as a reason for needing real-time data—so these examples from link:https://eng.lyft.com/eta-estimated-time-of-arrival-reliability-at-lyft-d4ca2720bda8?source=rss----25cd379abb8---4[Lyft] and link:https://www.uber.com/en-GB/blog/personalized-marketing-at-scale/[Uber] of how they use data are a really refreshing read.
 * I was fascinated by link:https://engineering.atspotify.com/2024/04/data-platform-explained/[this teaser] from Spotify about more details of their data platform, and delighted when they published link:https://engineering.atspotify.com/2024/05/data-platform-explained-part-ii/[this followup] going into details of some of the design as well as technologies used, including Apache Flink and BigQuery.
 * Uber are not mucking about when it comes to data volumes in their batch systems—over an exabyte is held across their estate of Hadoop (HDFS) servers. link:https://www.uber.com/en-GB/blog/modernizing-ubers-data-infrastructure-with-gcp/[This blog] details their migration from purely on-premises infrastructure to a hybrid deployment with GCP. Whilst adopting Google's object store (GCS) they are for now continuing to run their own software, with a move to native PaaS on GCP planned in for the future.
 
