--- a/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
+++ b/content/blog/decodable-vs-amazon-msf-running-your-first-apache-flink-job.adoc
@@ -29,7 +29,7 @@ Let's take a look at MSF first, followed by Decodable, which supports deploying 
 
 
 == Deploying an Apache Flink Job on MSF
-The Flink offering on AWS comes in two different flavors: you can choose between deploying “Streaming applications” (to “analyze streaming data with data analytics applications”) and “Studio notebooks” (to “interactively query data streams in real time”).
+The Flink offering on AWS comes in two different flavors: you can choose between deploying "Streaming applications" (to "analyze streaming data with data analytics applications") and "Studio notebooks" (to "interactively query data streams in real time").
 
 It's not quite clear from the outset which option to choose when being new to the service, but there is a link:https://docs.aws.amazon.com/managed-flink/latest/java/what-is.html[documentation page] which helps you to make a decision depending on your specific use case.
 Essentially, MSF allows you to run notebook applications (based on link:https://zeppelin.apache.org/[Apache Zeppelin] ), which is primarily meant for interactive use cases such as data exploration with SQL and Python on the one hand, and long-running stream processing applications based on Apache Flink on the other hand.
@@ -46,7 +46,7 @@ _Fig.1: Creating a new streaming application in Amazon MSF_What follows is a man
 Here you need to choose or create an S3 bucket which will contain the Flink job file to deploy (for security reasons, make sure to limit access to the bucket as much as possible, in particular you should disable public access).
 Upload the file, for instance using the S3 web console, and then specify the path of the file in the bucket in the MSF configuration step.
 After that's done, you can optionally fine-tune the logging, monitoring, snapshotting, checkpointing, and scaling behaviors for the application.
-Next, you can launch your application by clicking the “Run” button in the MSF console, and once the application is in “Running” state, you can examine logs and metrics directly from within MSF.
+Next, you can launch your application by clicking the "Run" button in the MSF console, and once the application is in "Running" state, you can examine logs and metrics directly from within MSF.
 Alternatively, the standard Flink web dashboard can also be accessed for gaining deeper insight into the runtime behaviors of your job.
 
 
@@ -55,7 +55,7 @@ _Fig.2: Configuring streaming application in Amazon MSF after setting it up_
 === Deploying a PyFlink Job on MSF
 If you'd like to deploy a Python-based job (using the link:https://nightlies.apache.org/flink/flink-docs-master/docs/dev/python/overview/[PyFlink] API), the link:https://docs.aws.amazon.com/managed-flink/latest/java/how-python-creating.html[required steps] are slightly more involved.
 After uploading the job as a ZIP file (instead of a JAR file as for Java-based jobs), you'll need to specify the name of your job's Python script.
-To do so, go to “Runtime properties” and create a new entry with the group id `kinesis.analytics.flink.run.options` and the key `python` (the “kinesis.analytics” part being a reference to the link:https://aws.amazon.com/blogs/aws/announcing-amazon-managed-service-for-apache-flink-renamed-from-amazon-kinesis-data-analytics/[original name] of AWS' Flink offering, “Amazon Kinesis Data Analytics”).
+To do so, go to "Runtime properties" and create a new entry with the group id `kinesis.analytics.flink.run.options` and the key `python` (the "kinesis.analytics" part being a reference to the link:https://aws.amazon.com/blogs/aws/announcing-amazon-managed-service-for-apache-flink-renamed-from-amazon-kinesis-data-analytics/[original name] of AWS' Flink offering, "Amazon Kinesis Data Analytics").
 Specify the name of your script as the property value, for instance, `main.py`.
 
 If your job requires third-party Python libraries, add them in a subdirectory within your ZIP file and create another configuration property, using the same group id `kinesis.analytics.flink.run.options` as before, with `pyFiles` as the key.
@@ -68,10 +68,10 @@ Next, let's take a look at how to get started with running an existing Flink job
 
 == Deploying an Apache Flink Job on Decodable
 In Decodable, link:https://docs.decodable.co/pipelines/create-pipelines-using-your-own-apache-flink-jobs.html[Custom Pipelines] enable you to run your own Flink jobs.
-To create a new pipeline using the web interface (you can use the CLI or API too), switch to the “Pipelines” tab, then select “New Pipeline” → “Upload Flink Job”.
+To create a new pipeline using the web interface (you can use the CLI or API too), switch to the "Pipelines" tab, then select "New Pipeline" → "Upload Flink Job".
 In the wizard which opens up, you can specify a Flink version and directly upload the job file.
 Optionally, you also can specify the name of the main job class (otherwise, this is retrieved from the manifest file of the JAR), arguments to pass to the job, as well as configuration files and link:https://docs.decodable.co/administer/manage-secrets.html[managed Decodable secrets] which should be made available to the job.
-Click “Next”, provide a name for the application, and that's it.
+Click "Next", provide a name for the application, and that's it.
 You can now launch the job, and once it's up and running, access metrics and logs from within Decodable as well as fire up the Flink web dashboard if desired.
 
 
