--- a/content/blog/mastering-postgres-replication-slots.asciidoc
+++ b/content/blog/mastering-postgres-replication-slots.asciidoc
@@ -123,7 +123,7 @@ If the difference between a slot's restart LSN and the current LSN is larger tha
 
 A situation which is particularly prone to accidental WAL growth is the combination of multiple logical databases with different traffic patterns on one Postgres host. This is because there is one shared WAL for the entire instance, whereas replication slots are scoped to individual databases. Now, imagine a situation where there are many transactions run against one database--thus adding many entries to the WAL--while there's another database which is idle. A replication slot for that second database can't make any progress, as it never receives any change events, and therefore will cause more and more WAL segments to be retained.
 
-A solution to this is to produce some “fake” traffic in that second database, allowing its replication slot to progress. Historically, a dedicated heartbeat table was often used for this purpose. However, Postgres 14+ offers an elegant table-less alternative: via the function https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-REPLICATION[`pg_logical_emit_message()`], arbitrary contents can be written to the WAL, without them manifesting in any table. There's a number of https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/[interesting applications] for these logical decoding messages, including advancing replication slots in low traffic databases. To enable heartbeat messages with Debezium, add the following to your connector configuration:
+A solution to this is to produce some "fake" traffic in that second database, allowing its replication slot to progress. Historically, a dedicated heartbeat table was often used for this purpose. However, Postgres 14+ offers an elegant table-less alternative: via the function https://www.postgresql.org/docs/current/functions-admin.html#FUNCTIONS-REPLICATION[`pg_logical_emit_message()`], arbitrary contents can be written to the WAL, without them manifesting in any table. There's a number of https://www.infoq.com/articles/wonders-of-postgres-logical-decoding-messages/[interesting applications] for these logical decoding messages, including advancing replication slots in low traffic databases. To enable heartbeat messages with Debezium, add the following to your connector configuration:
 
 [source,json,linenums=true]
 ----
@@ -165,7 +165,7 @@ When using Debezium, it can create publications for you automatically. By defaul
 
 Alternatively, you can have Debezium create table-level publications by setting the https://debezium.io/documentation/reference/stable/connectors/postgresql.html#postgresql-publication-autocreate-mode[`publication.autocreate.mode`] connector option to `filtered`. Debezium will then create a publication reflecting the set of captured tables as defined via the connector's table and schema include/exclude filters. Note that this requires ownership permissions to all affected tables for the connector user.
 
-To follow the principle of least privilege, you should therefore consider creating a publication for the connector by yourself, thus minimizing the set of permissions you need to grant to the connector user. By default, the publication is expected to be named “dbz_publication”, but you can override the name via the https://debezium.io/documentation/reference/stable/connectors/postgresql.html#postgresql-property-publication-name[`publication.name`] connector property. When setting up multiple connectors for capturing distinct sets of tables in the same database, a dedicated publication needs to be created for each connector.
+To follow the principle of least privilege, you should therefore consider creating a publication for the connector by yourself, thus minimizing the set of permissions you need to grant to the connector user. By default, the publication is expected to be named "dbz_publication", but you can override the name via the https://debezium.io/documentation/reference/stable/connectors/postgresql.html#postgresql-property-publication-name[`publication.name`] connector property. When setting up multiple connectors for capturing distinct sets of tables in the same database, a dedicated publication needs to be created for each connector.
 
 == Use Column and Row Filters
 
